fix(prospect,client): ajout d'un spacing 8px entre Value et Message, et value ferré à droite

--- a/packages/canopee-css/src/prospect-client/List/ContentItemDuo/ContentItemDuoCommon.css
+++ b/packages/canopee-css/src/prospect-client/List/ContentItemDuo/ContentItemDuoCommon.css
@@ -33,6 +33,10 @@
     color: var(--content-item-duo-value-color);
   }
 
+  .af-content-item-duo__message {
+    margin-top: 8px;
+  }
+
   .af-content-item-duo__button {
     grid-area: button;
     justify-self: var(--content-item-duo-button-justify);
@@ -47,6 +51,13 @@
     grid-template:
       "label value"
       ". button";
+  }
+
+  &.af-content-item-duo--horizontal.af-content-item-duo--small
+    .af-content-item-duo__value {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
   }
 
   &.af-content-item-duo--horizontal.af-content-item-duo--small {
